# llm-review-sys-SFT

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/: deepspeed_zero2.json
data/: dataset_info.json
docs/: EVALUATION.md
output/: test_output_2.txt
scripts/: analyze_tokens.py  chat.py  compare_models.py  evaluate.py  run_evaluation.bat  run_evaluation.sh  test_evaluation.py  test_local.py  test_model.py  train_qlora.py  upload_to_modelscope.py
src/: __init__.py  chat.py  config.py  evaluate.py  train.py
src/evaluation/: __init__.py  comparator.py  config.py  format_eval.py  llm_judge.py  quality_eval.py  score_eval.py
